[package]
name = "app"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
codee = "0.2.0"
console_error_panic_hook = "0.1"
console_log = "1"
engine = { path = "../engine" }
interpreter = { path = "../interpreter" }
leptos = { version = "0.6.14", features = ["csr"] }
leptos-use = "0.13.0"
log = "0.4"
nalgebra = "0.33.0"
wasm-bindgen = "0.2.0"
wasm-bindgen-futures = "0.4.43"
web-sys = "0.3.70"

[package.metadata.leptos]
lib-profile-release = "wasm-release"
